# rust-api

./: .gitignore  README.md
api/: Cargo.toml  Rocket.toml
api/src/: canopee_user_model.rs  chantier_model.rs  chef_chantier_user_model.rs  depense_main_doeuvre_model.rs  journal_chantier_model.rs  main.rs  ouvrier_chantier_model.rs  schema.rs  tests.rs  utils.rs
